--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "tareq1988/wp-eloquent",
+    "name": "tea/wp-eloquent",
     "description": "Eloquent ORM for WordPress",
     "keywords": ["wordpress", "plugin", "orm", "eloquent", "sql"],
-    "homepage": "https://github.com/tareq1988/wp-eloquent",
+    "homepage": "https://github.com/davidkyalo/wp-eloquent",
     "require": {
-        "illuminate/database": "5.0.*"
+        "illuminate/database": "5.1.*"
     },
     "license": "GPL",
     "authors": [
